--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
         <section class="main-section">
             <ul>
-                <li>IN EVIDENZA</li>
+                <li class="active">IN EVIDENZA</li>
                 <li>PODCAST</li>
                 <li>CLASSIFICHE</li>
                 <li>GENERI E MOOD</li>
@@ -33,6 +33,8 @@
             </ul>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        
+    </footer>
 </body>
 </html>
