webapp mobile quasi completa

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Spotify</title>
 </head>
@@ -17,6 +18,10 @@
                 <li><img src="images/libreria.svg" alt="library icon"></li>
             </ul>
         </nav>
+        <div class="user-profile">
+            <i class="far fa-arrow-alt-circle-down"></i>
+            <img src="images/profile.svg" alt="profile icon">
+        </div>
     </header>
     <main>
         <section class="upgrade-section">
@@ -31,10 +36,33 @@
                 <li>NUOVE USCITE</li>
                 <li>SCOPRI</li>
             </ul>
+            <h1>Recently Played</h1>
+            <div class="album-card-container">
+                <div class="album-card">
+                   <img src="images/metal_lifting.jpg" alt="metal album">
+                   <h3>Heavy Metal</h3>
+                   <h4>Subtitle</h4>
+                </div>
+                <div class="album-card">
+                    <img src="images/stranger.jpeg" alt="stranger album">
+                   <h3>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h3>
+                   <h4>Subtitle</h4>
+                </div>
+                <div class="album-card">
+                    <img src="images/sinister.jpeg" alt="metal album">
+                   <h3>Heavy Metal</h3>
+                   <h4>Subtitle</h4>
+                </div>
+                <div class="album-card">
+                    <img src="images/radar.jpeg" alt="metal album">
+                   <h3>Heavy Metal</h3>
+                   <h4>Subtitle</h4>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
