--- a/index.html
+++ b/index.html
@@ -11,16 +11,44 @@
 <body>
     <main>
         <nav>
+            <img src="images/logo-small.svg" alt="logo small">
+            <img src="images/logo.svg" alt="logo">
             <ul class="icon-list">
-                <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 167.5 167.5" class="spotify-logo"><title>Spotify</title><path fill="#ffffff" d="M83.7 0C37.5 0 0 37.5 0 83.7c0 46.3 37.5 83.7 83.7 83.7 46.3 0 83.7-37.5 83.7-83.7S130 0 83.7 0zM122 120.8c-1.4 2.5-4.6 3.2-7 1.7-19.8-12-44.5-14.7-73.7-8-2.8.5-5.6-1.2-6.2-4-.2-2.8 1.5-5.6 4-6.2 32-7.3 59.6-4.2 81.6 9.3 2.6 1.5 3.4 4.7 1.8 7.2zM132.5 98c-2 3-6 4-9 2.2-22.5-14-56.8-18-83.4-9.8-3.2 1-7-1-8-4.3s1-7 4.6-8c30.4-9 68.2-4.5 94 11 3 2 4 6 2 9zm1-23.8c-27-16-71.6-17.5-97.4-9.7-4 1.3-8.2-1-9.5-5.2-1.3-4 1-8.5 5.2-9.8 29.6-9 78.8-7.2 109.8 11.2 3.7 2.2 5 7 2.7 10.7-2 3.8-7 5-10.6 2.8z"/></svg></li>
-                <li><img src="images/home.svg" alt="home icon"></li>
-                <li><img src="images/search.svg" alt="search icon"></li>
-                <li><img src="images/libreria.svg" alt="library icon"></li>
+                <li class="vertical-active"><img src="images/home.svg" alt="home icon"><span><h4>Home</h4></span></li>
+                <li><img src="images/search.svg" alt="search icon"><span><h4>Cerca</h4></span></li>
+                <li><img src="images/libreria.svg" alt="library icon"><span><h4>La tua Libreria</h4></span></li>
             </ul>
-        
+            <div class="playlist-container">
+                    <h3>PLAYLIST</h3>
+                    <h5><span>+</span> Crea Playlist</h5>
+                    <ul>
+                        <li>
+                            <h4>Nome Playlist</h4>
+                        </li>
+                        <li>
+                            <h4>Nome PLaylist</h4>
+                        </li>
+                        <li>
+                            <h4>Nome Playlist</h4>
+                        </li>
+                        <li>
+                            <h4>Nome Playlist</h4>
+                        </li>
+                        <li>
+                            <h4>Nome Playlist</h4>
+                        </li>
+                    </ul>
+            </div>
             <div class="user-profile">
-                <i class="far fa-arrow-alt-circle-down"></i>
-                <img src="images/profile.svg" alt="profile icon">
+                <div>
+                    <i class="far fa-arrow-alt-circle-down"></i>
+                    <span>Installa app</span>
+                </div>
+                <div>
+                    <img src="images/profile.svg" alt="profile icon">
+                    <span><h4>Lorenzo Rottigni</h4></span>
+                </div>
+                
             </div>
         </nav>
         <section class="main-section">
@@ -58,7 +86,6 @@
                     <h3>Heavy Metal</h3>
                     <h4>Subtitle</h4>
                     </div> 
-                    <div class="album-card-container">
                     <div class="album-card">
                     <img src="images/metal_lifting.jpg" alt="metal album">
                     <h3>Heavy Metal</h3>
@@ -69,17 +96,24 @@
                     <h3>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h3>
                     <h4>Subtitle</h4>
                     </div>
+                </div>
+                <h1>Creato per Lorenzo Rottigni</h1>
+                <div class="album-card-container">
                     <div class="album-card">
-                    <img src="images/sinister.jpeg" alt="metal album">
+                    <img src="images/metal_lifting.jpg" alt="metal album">
                     <h3>Heavy Metal</h3>
                     <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
-                    <img src="images/radar.jpeg" alt="metal album">
+                        <img src="images/stranger.jpeg" alt="stranger album">
+                    <h3>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h3>
+                    <h4>Subtitle</h4>
+                    </div>
+                    <div class="album-card">
+                        <img src="images/sinister.jpeg" alt="metal album">
                     <h3>Heavy Metal</h3>
                     <h4>Subtitle</h4>
-                    </div>  
-
+                    </div>
                 </div>
             </div>
         </section>
