--- a/index.html
+++ b/index.html
@@ -115,6 +115,26 @@
                     <h4>Subtitle</h4>
                     </div>
                 </div>
+                <h1>Artisti più popolari</h1>
+                <h4>Più ascolti, più saranno accurati i suggerimenti.</h4>
+                <div class="album-card-container">
+                    <div class="album-card">
+                    <img src="images/aquietplace.jpeg" alt="metal album">
+                    <h3>Heavy Metal</h3>
+                    <h4>Subtitle</h4>
+                    </div>
+                    <div class="album-card">
+                        <img src="images/stranger.jpeg" alt="stranger album">
+                    <h3>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h3>
+                    <h4>Subtitle</h4>
+                    </div>
+                    <div class="album-card">
+                        <img src="images/sinister.jpeg" alt="metal album">
+                    <h3>Heavy Metal</h3>
+                    <h4>Subtitle</h4>
+                    </div>
+                </div>
+
             </div>
         </section>
         <!--<section class="upgrade-section">
