Codice completo da perfezionare

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Spotify</title>
@@ -19,8 +22,8 @@
                 <li><img src="images/libreria.svg" alt="library icon"><span><h4>La tua Libreria</h4></span></li>
             </ul>
             <div class="playlist-container">
-                    <h3>PLAYLIST</h3>
-                    <h5><span>+</span> Crea Playlist</h5>
+                    <h2>PLAYLIST</h2>
+                    <div><span>+</span> <h3>Crea Playlist</h3></div>
                     <ul>
                         <li>
                             <h4>Nome Playlist</h4>
@@ -46,7 +49,7 @@
                 </div>
                 <div>
                     <img src="images/profile.svg" alt="profile icon">
-                    <span><h4>Lorenzo Rottigni</h4></span>
+                    <span><h2>Lorenzo Rottigni</h2></span>
                 </div>
                 
             </div>
@@ -68,32 +71,32 @@
                 <div class="album-card-container">
                     <div class="album-card">
                     <img src="images/metal_lifting.jpg" alt="metal album">
-                    <h3>Heavy Metal</h3>
+                    <h2>Heavy Metal</h2>
                     <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
                         <img src="images/stranger.jpeg" alt="stranger album">
-                    <h3>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h3>
+                    <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
                     <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
                         <img src="images/sinister.jpeg" alt="metal album">
-                    <h3>Heavy Metal</h3>
+                    <h2>Heavy Metal</h2>
                     <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
                         <img src="images/radar.jpeg" alt="metal album">
-                    <h3>Heavy Metal</h3>
+                    <h2>Heavy Metal</h2>
                     <h4>Subtitle</h4>
                     </div> 
                     <div class="album-card">
                     <img src="images/metal_lifting.jpg" alt="metal album">
-                    <h3>Heavy Metal</h3>
+                    <h2>Heavy Metal</h2>
                     <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
                     <img src="images/stranger.jpeg" alt="stranger album">
-                    <h3>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h3>
+                    <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
                     <h4>Subtitle</h4>
                     </div>
                 </div>
@@ -101,36 +104,36 @@
                 <div class="album-card-container">
                     <div class="album-card">
                     <img src="images/metal_lifting.jpg" alt="metal album">
-                    <h3>Heavy Metal</h3>
+                    <h2>Heavy Metal</h2>
                     <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
                         <img src="images/stranger.jpeg" alt="stranger album">
-                    <h3>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h3>
+                    <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
                     <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
                         <img src="images/sinister.jpeg" alt="metal album">
-                    <h3>Heavy Metal</h3>
+                    <h2>Heavy Metal</h2>
                     <h4>Subtitle</h4>
                     </div>
                 </div>
                 <h1>Artisti più popolari</h1>
-                <h4>Più ascolti, più saranno accurati i suggerimenti.</h4>
+                <h5>Più ascolti, più saranno accurati i suggerimenti.</h5>
                 <div class="album-card-container">
                     <div class="album-card">
                     <img src="images/aquietplace.jpeg" alt="metal album">
-                    <h3>Heavy Metal</h3>
+                    <h2>Heavy Metal</h2>
                     <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
                         <img src="images/stranger.jpeg" alt="stranger album">
-                    <h3>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h3>
+                    <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
                     <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
                         <img src="images/sinister.jpeg" alt="metal album">
-                    <h3>Heavy Metal</h3>
+                    <h2>Heavy Metal</h2>
                     <h4>Subtitle</h4>
                     </div>
                 </div>
