--- a/index.html
+++ b/index.html
@@ -69,32 +69,50 @@
                 <h1>Recently Played</h1>
                 <div class="album-card-container">
                     <div class="album-card">
-                        <img src="images/metal_lifting.jpg" alt="metal album">
+                        <div class="img-container">
+                            <img src="images/metal_lifting.jpg" alt="metal album">
+                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                        </div>
                         <h2>Heavy Metal</h2>
                         <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
-                        <img src="images/stranger.jpeg" alt="stranger album">
+                        <div class="img-container">
+                            <img src="images/stranger.jpeg" alt="stranger album">
+                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                        </div>
                         <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
                         <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
-                        <img src="images/sinister.jpeg" alt="metal album">
+                        <div class="img-container">
+                            <img src="images/sinister.jpeg" alt="metal album">
+                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                        </div>
                         <h2>Heavy Metal</h2>
                         <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
-                        <img src="images/radar.jpeg" alt="metal album">
+                        <div class="img-container">
+                            <img src="images/radar.jpeg" alt="metal album">
+                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                        </div>
                         <h2>Heavy Metal</h2>
                         <h4>Subtitle</h4>
                     </div> 
                     <div class="album-card">
-                        <img src="images/metal_lifting.jpg" alt="metal album">
+                        <div class="img-container">
+                            <img src="images/metal_lifting.jpg" alt="metal album">
+                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                        </div>
                         <h2>Heavy Metal</h2>
                         <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
-                        <img src="images/stranger.jpeg" alt="stranger album">
+                        <div class="img-container">
+                            <img src="images/stranger.jpeg" alt="stranger album">
+                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                        </div>
                         <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
                         <h4>Subtitle</h4>
                     </div>
@@ -102,17 +120,26 @@
                 <h1>Creato per Lorenzo Rottigni</h1>
                 <div class="album-card-container">
                     <div class="album-card">
-                        <img src="images/metal_lifting.jpg" alt="metal album">
+                        <div class="img-container">
+                            <img src="images/metal_lifting.jpg" alt="metal album">
+                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                        </div>
                         <h2>Heavy Metal</h2>
                         <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
-                        <img src="images/stranger.jpeg" alt="stranger album">
+                        <div class="img-container">
+                            <img src="images/stranger.jpeg" alt="stranger album">
+                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                        </div>
                         <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
                         <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
-                        <img src="images/sinister.jpeg" alt="metal album">
+                        <div class="img-container">
+                            <img src="images/sinister.jpeg" alt="metal album">
+                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                        <div class="img-container">
                         <h2>Heavy Metal</h2>
                         <h4>Subtitle</h4>
                     </div>
@@ -121,17 +148,26 @@
                 <h5>Più ascolti, più saranno accurati i suggerimenti.</h5>
                 <div class="album-card-container">
                     <div class="album-card">
-                        <img src="images/aquietplace.jpeg" alt="metal album">
+                        <div class="img-container">
+                            <img src="images/aquietplace.jpeg" alt="metal album">
+                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                        </div>
                         <h2>Heavy Metal</h2>
                         <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
-                        <img src="images/stranger.jpeg" alt="stranger album">
+                        <div class="img-container">
+                            <img src="images/stranger.jpeg" alt="stranger album">
+                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                        </div>
                         <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
                         <h4>Subtitle</h4>
                     </div>
                     <div class="album-card">
-                        <img src="images/sinister.jpeg" alt="metal album">
+                        <div class="img-container">
+                            <img src="images/sinister.jpeg" alt="metal album">
+                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                        </div>
                         <h2>Heavy Metal</h2>
                         <h4>Subtitle</h4>
                     </div>
