Aggiunte tutte le animazioni

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <span>Installa app</span>
                 </div>
                 <div>
-                    <img src="images/profile.svg" alt="profile icon">
+                    <img src="images/me.jpeg" alt="profile icon">
                     <span><h2>Lorenzo Rottigni</h2></span>
                 </div>
             </div>
@@ -139,14 +139,14 @@
                         <div class="img-container">
                             <img src="images/sinister.jpeg" alt="metal album">
                             <div class="super-center"><i class="far fa-play-circle"></i></div>
-                        <div class="img-container">
+                        </div>
                         <h2>Heavy Metal</h2>
                         <h4>Subtitle</h4>
                     </div>
                 </div>
                 <h1>Artisti più popolari</h1>
                 <h5>Più ascolti, più saranno accurati i suggerimenti.</h5>
-                <div class="album-card-container">
+                <div class="album-card-container border-radius">
                     <div class="album-card">
                         <div class="img-container">
                             <img src="images/aquietplace.jpeg" alt="metal album">
@@ -201,7 +201,7 @@
             </div>
             <div class="song-bar-container">
                 <p>0:25</p>
-                <div class="song-bar"></div>
+                <div class="song-bar"><div class="cursor-drag"></div></div>
                 <p>4:35</p>
             </div>
         </div>
@@ -212,7 +212,7 @@
             </div>
             <div class="volume-container">
                 <i class="fas fa-volume-up"></i>
-                <div class="song-bar"></div>
+                <div class="song-bar"><div class="cursor-drag"></div></div>
             </div>
         </div>
         
