--- a/index.html
+++ b/index.html
@@ -57,123 +57,124 @@
             <div class="upgrade-container">
                 <button class="upgrade-button">EFFETTUA L'UPGRADE</button>
             </div>
-            <div class="album-container">
-                <ul>
-                    <li class="active">IN EVIDENZA</li>
-                    <li>PODCAST</li>
-                    <li>CLASSIFICHE</li>
-                    <li>GENERI E MOOD</li>
-                    <li>NUOVE USCITE</li>
-                    <li>SCOPRI</li>
-                </ul>
-                <h1>Recently Played</h1>
-                <div class="album-card-container">
-                    <div class="album-card">
-                        <div class="img-container">
-                            <img src="images/metal_lifting.jpg" alt="metal album">
-                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                <div class="album-container">
+                    <ul>
+                        <li class="active">IN EVIDENZA</li>
+                        <li>PODCAST</li>
+                        <li>CLASSIFICHE</li>
+                        <li>GENERI E MOOD</li>
+                        <li>NUOVE USCITE</li>
+                        <li>SCOPRI</li>
+                    </ul>
+                    <div class="main-container">
+                    <h1>Recently Played</h1>
+                    <div class="album-card-container">
+                        <div class="album-card">
+                            <div class="img-container">
+                                <img src="images/metal_lifting.jpg" alt="metal album">
+                                <div class="super-center"><i class="far fa-play-circle"></i></div>
+                            </div>
+                            <h2>Heavy Metal</h2>
+                            <h4>Subtitle</h4>
                         </div>
-                        <h2>Heavy Metal</h2>
-                        <h4>Subtitle</h4>
+                        <div class="album-card">
+                            <div class="img-container">
+                                <img src="images/stranger.jpeg" alt="stranger album">
+                                <div class="super-center"><i class="far fa-play-circle"></i></div>
+                            </div>
+                            <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
+                            <h4>Subtitle</h4>
+                        </div>
+                        <div class="album-card">
+                            <div class="img-container">
+                                <img src="images/sinister.jpeg" alt="metal album">
+                                <div class="super-center"><i class="far fa-play-circle"></i></div>
+                            </div>
+                            <h2>Heavy Metal</h2>
+                            <h4>Subtitle</h4>
+                        </div>
+                        <div class="album-card">
+                            <div class="img-container">
+                                <img src="images/radar.jpeg" alt="metal album">
+                                <div class="super-center"><i class="far fa-play-circle"></i></div>
+                            </div>
+                            <h2>Heavy Metal</h2>
+                            <h4>Subtitle</h4>
+                        </div> 
+                        <div class="album-card">
+                            <div class="img-container">
+                                <img src="images/metal_lifting.jpg" alt="metal album">
+                                <div class="super-center"><i class="far fa-play-circle"></i></div>
+                            </div>
+                            <h2>Heavy Metal</h2>
+                            <h4>Subtitle</h4>
+                        </div>
+                        <div class="album-card">
+                            <div class="img-container">
+                                <img src="images/stranger.jpeg" alt="stranger album">
+                                <div class="super-center"><i class="far fa-play-circle"></i></div>
+                            </div>
+                            <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
+                            <h4>Subtitle</h4>
+                        </div>
                     </div>
-                    <div class="album-card">
-                        <div class="img-container">
-                            <img src="images/stranger.jpeg" alt="stranger album">
-                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                    <h1>Creato per Lorenzo Rottigni</h1>
+                    <div class="album-card-container">
+                        <div class="album-card">
+                            <div class="img-container">
+                                <img src="images/metal_lifting.jpg" alt="metal album">
+                                <div class="super-center"><i class="far fa-play-circle"></i></div>
+                            </div>
+                            <h2>Heavy Metal</h2>
+                            <h4>Subtitle</h4>
                         </div>
-                        <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
-                        <h4>Subtitle</h4>
+                        <div class="album-card">
+                            <div class="img-container">
+                                <img src="images/stranger.jpeg" alt="stranger album">
+                                <div class="super-center"><i class="far fa-play-circle"></i></div>
+                            </div>
+                            <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
+                            <h4>Subtitle</h4>
+                        </div>
+                        <div class="album-card">
+                            <div class="img-container">
+                                <img src="images/sinister.jpeg" alt="metal album">
+                                <div class="super-center"><i class="far fa-play-circle"></i></div>
+                            </div>
+                            <h2>Heavy Metal</h2>
+                            <h4>Subtitle</h4>
+                        </div>
                     </div>
-                    <div class="album-card">
-                        <div class="img-container">
-                            <img src="images/sinister.jpeg" alt="metal album">
-                            <div class="super-center"><i class="far fa-play-circle"></i></div>
+                    <h1>Artisti più popolari</h1>
+                    <h5>Più ascolti, più saranno accurati i suggerimenti.</h5>
+                    <div class="album-card-container border-radius">
+                        <div class="album-card">
+                            <div class="img-container">
+                                <img src="images/aquietplace.jpeg" alt="metal album">
+                                <div class="super-center"><i class="far fa-play-circle"></i></div>
+                            </div>
+                            <h2>Heavy Metal</h2>
+                            <h4>Subtitle</h4>
                         </div>
-                        <h2>Heavy Metal</h2>
-                        <h4>Subtitle</h4>
+                        <div class="album-card">
+                            <div class="img-container">
+                                <img src="images/stranger.jpeg" alt="stranger album">
+                                <div class="super-center"><i class="far fa-play-circle"></i></div>
+                            </div>
+                            <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
+                            <h4>Subtitle</h4>
+                        </div>
+                        <div class="album-card">
+                            <div class="img-container">
+                                <img src="images/sinister.jpeg" alt="metal album">
+                                <div class="super-center"><i class="far fa-play-circle"></i></div>
+                            </div>
+                            <h2>Heavy Metal</h2>
+                            <h4>Subtitle</h4>
+                        </div>
                     </div>
-                    <div class="album-card">
-                        <div class="img-container">
-                            <img src="images/radar.jpeg" alt="metal album">
-                            <div class="super-center"><i class="far fa-play-circle"></i></div>
-                        </div>
-                        <h2>Heavy Metal</h2>
-                        <h4>Subtitle</h4>
-                    </div> 
-                    <div class="album-card">
-                        <div class="img-container">
-                            <img src="images/metal_lifting.jpg" alt="metal album">
-                            <div class="super-center"><i class="far fa-play-circle"></i></div>
-                        </div>
-                        <h2>Heavy Metal</h2>
-                        <h4>Subtitle</h4>
-                    </div>
-                    <div class="album-card">
-                        <div class="img-container">
-                            <img src="images/stranger.jpeg" alt="stranger album">
-                            <div class="super-center"><i class="far fa-play-circle"></i></div>
-                        </div>
-                        <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
-                        <h4>Subtitle</h4>
                     </div>
                 </div>
-                <h1>Creato per Lorenzo Rottigni</h1>
-                <div class="album-card-container">
-                    <div class="album-card">
-                        <div class="img-container">
-                            <img src="images/metal_lifting.jpg" alt="metal album">
-                            <div class="super-center"><i class="far fa-play-circle"></i></div>
-                        </div>
-                        <h2>Heavy Metal</h2>
-                        <h4>Subtitle</h4>
-                    </div>
-                    <div class="album-card">
-                        <div class="img-container">
-                            <img src="images/stranger.jpeg" alt="stranger album">
-                            <div class="super-center"><i class="far fa-play-circle"></i></div>
-                        </div>
-                        <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
-                        <h4>Subtitle</h4>
-                    </div>
-                    <div class="album-card">
-                        <div class="img-container">
-                            <img src="images/sinister.jpeg" alt="metal album">
-                            <div class="super-center"><i class="far fa-play-circle"></i></div>
-                        </div>
-                        <h2>Heavy Metal</h2>
-                        <h4>Subtitle</h4>
-                    </div>
-                </div>
-                <h1>Artisti più popolari</h1>
-                <h5>Più ascolti, più saranno accurati i suggerimenti.</h5>
-                <div class="album-card-container border-radius">
-                    <div class="album-card">
-                        <div class="img-container">
-                            <img src="images/aquietplace.jpeg" alt="metal album">
-                            <div class="super-center"><i class="far fa-play-circle"></i></div>
-                        </div>
-                        <h2>Heavy Metal</h2>
-                        <h4>Subtitle</h4>
-                    </div>
-                    <div class="album-card">
-                        <div class="img-container">
-                            <img src="images/stranger.jpeg" alt="stranger album">
-                            <div class="super-center"><i class="far fa-play-circle"></i></div>
-                        </div>
-                        <h2>Stranger Things Vol. 1(a Netflix Original Series Soundtrack)</h2>
-                        <h4>Subtitle</h4>
-                    </div>
-                    <div class="album-card">
-                        <div class="img-container">
-                            <img src="images/sinister.jpeg" alt="metal album">
-                            <div class="super-center"><i class="far fa-play-circle"></i></div>
-                        </div>
-                        <h2>Heavy Metal</h2>
-                        <h4>Subtitle</h4>
-                    </div>
-                </div>
-
-            </div>
         </section>
     </main>
     <footer>
